add Teacher  services

--- a/TestApp/Views/Student/Index.cshtml
+++ b/TestApp/Views/Student/Index.cshtml
@@ -11,7 +11,10 @@
 </p>
 <table class="table">
     <tr>
-        <th></th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Date Of Birth</th>
+        <th>Actions</th>
     </tr>
 
 @foreach (var item in Model) {
@@ -28,7 +31,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
